TEST_PROGRAMS/INVALID/maxim_gorshkov/invalid2.min
# Invalid Program 2
# Maxim Gorshkov
# 260397155
#
# Error: Line is missing a semicolon

var invalid: string
